@@ -10,7 +10,6 @@
   <script type="application/x-javascript" src="chrome://firephp/content/md5.js"/>
   <script type="application/x-javascript" src="chrome://firephp/content/json_parse.js"/>
   <script type="application/x-javascript" src="chrome://firephp/content/FirePHPLib.js"/>
-  <script type="application/x-javascript" src="chrome://firephp/content/jquery.js"/>
   <script type="application/x-javascript" src="chrome://firephp/content/Wildfire/Wildfire.js"/>
   <script type="application/x-javascript" src="chrome://firephp/content/Wildfire/Channel/HttpHeaders.js"/>
   <script type="application/x-javascript" src="chrome://firephp/content/Wildfire/Protocol/JsonStream.js"/>
