@@ -1,4 +1,5 @@
 
+  - Removed dependency on jQuery for Ajax requests
   - Added info message with link in console when server library is not latest available
   - Added detection and recording of server wildfire plugin version
   - Fix for Wildfire JsonStream to allow Wf-*-Index header to be sent in any position
